# minecraft-server-designer

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: build_command.rs  init.rs  main.rs  mod_command.rs
src/downloader/: curseforge_mod_downloader.rs  fabric_downloader.rs  mod.rs  modrinth_mod_downloader.rs  universal_downloader.rs  vanilla_downloader.rs
src/models/: config.rs  download_mod_metadata.rs  download_result.rs  startup_args.rs
src/providers/: curseforge_provider.rs  local_provider.rs  mod.rs  modrinth_provider.rs
src/test/: downloader.rs
src/viewmodel/: config.rs  download_mod_metadata.rs  download_result.rs  mod.rs  startup_args.rs
