[package]
name = "minecraft-server-designer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.5", features = ["derive"] }

reqwest = { version = "~0.12", features = ["json"] }

tokio = { version = "~1.45", features = ["full"] }
anyhow = "~1.0"

serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.9"
serde_json = "~1.0"
xmltojson = "~0.2"

colored = "~3.0"
prettytable-rs = "~0.10"

java-locator = { version = "~0.1", features = ["build-binary"] }

lazy_static = "~1.5"
strum_macros = "~0.27"
